--- a/editExtraCard.html
+++ b/editExtraCard.html
@@ -27,8 +27,8 @@
                   <input type="url" name="company_link" id="company_link" class="input-text"  placeholder="ex:https://princedecors.com" >
                </div>
                <div class="form-row">
-                  <label for="gmapLink">Google Map:</label>
-                  <input type="url" name="gmapLink" id="gmapLink" class="input-text"  placeholder="ex:https://goo.gl/maps/De72fPVZ8tP884eM9" >
+                  <label for="google_map_link">Google Map:</label>
+                  <input type="url" name="google_map_link" id="google_map_link" class="input-text"  placeholder="ex:https://goo.gl/maps/De72fPVZ8tP884eM9" >
                </div>
                <div class="form-row">
                   <label for="facebook_link">Facebook:</label>
