--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
                <li><a href="#gallery">Gallery</a></li>
                <!-- <li><a href="#team">Team</a></li>-->
                <li><a href="#pricing">Pricing</a></li>
-			   <li><a href="login.html" style="font-weight:900">Login</a></li>
-			   <li><a href="signup.html" style="font-weight:900">Signup</a></li>
+			   <li><a id ="login" href="login.html" style="font-weight:900">Login</a></li>
+			   <li><a id ="signup" href="signup.html" style="font-weight:900">Signup</a></li>
+			   <li><a id ="logout" href="javascript:logout()" style="font-weight:900">Logout</a></li>
+			   <li><a id ="viewCard" href="viewCard.html" style="font-weight:900">View Card</a></li>
+			   <li><a id ="editCard" href="editCard.html" style="font-weight:900">Edit Card</a></li>
                <!--<li class="drop-down"><a href="">Drop Down</a>
                   <ul>
                     <li><a href="#">Drop Down 1</a></li>
