--- a/jwtAuth.html
+++ b/jwtAuth.html
@@ -17,6 +17,7 @@
 	<input type="text" name="visitingCardId" id="visitingCardId" placeholder="visitingcardid" value="5eb5104112ffcc2c22613084"/><br><br>
 	<button id="getVisitingCardById">getVisitingCardById</button><br><br>
 	<button id="getVisitingCard">getVisitingCard</button><br><br>
+	 <button id="createDummyCard">createDummyCard post </button><br><br>
 	<button id="createVisitingCard">CreateVisitingCard - Post </button><br><br><br>
 	<input type="text" name="visitingCardIdPut" id="visitingCardIdPut" placeholder="visitingCardIdPut" value="5eb5104112ffcc2c22613084"/><br><br>
 	<button id="editVisitingCardById">EditVisitingCard by ID- Put </button><br><br>
@@ -44,9 +45,14 @@
         alert(JSON.stringify(data));
           alert('Hello ' + data + '! You have successfully accessed to /api/profile.');
         },
-        error: function() {
-          alert("Some error occured.");
-        }
+        error: function (xhr, status, error) {
+					var err= JSON.parse(xhr.responseText);
+					console.log("xhr.responseText : " + xhr.responseText);
+					console.log("error message : " + err.error);
+					console.log(xhr.status);
+					console.log("status : " + status);
+					console.log("error : " + error);
+				}
       });
     });
 	
@@ -66,9 +72,14 @@
         alert(JSON.stringify(data));
           alert('Hello ' + data + '! You have successfully accessed to /api/profile.');
         },
-        error: function() {
-          alert("Sorry, you are not logged in.");
-        }
+        error: function (xhr, status, error) {
+					var err= JSON.parse(xhr.responseText);
+					console.log("xhr.responseText : " + xhr.responseText);
+					console.log("error message : " + err.error);
+					console.log(xhr.status);
+					console.log("status : " + status);
+					console.log("error : " + error);
+				}
       });
     });
 	
@@ -92,12 +103,16 @@
         alert(JSON.stringify(data));
           alert('Hello ' + data + '! You have successfully accessed to /api/profile.');
         },
-        error: function() {
-          alert("Some error occured.");
-        }
+        error: function (xhr, status, error) {
+					var err= JSON.parse(xhr.responseText);
+					console.log("xhr.responseText : " + xhr.responseText);
+					console.log("error message : " + err.error);
+					console.log(xhr.status);
+					console.log("status : " + status);
+					console.log("error : " + error);
+				}
       });
     });
-	
 	
     $('#createVisitingCard').click(function() {
       $.ajax({
@@ -110,6 +125,7 @@
     "mobile_no": "8531990331",
     "company_name": "PrinceDecors",
     "designation": "Founder",
+	"services_provided": "Wedding planning",
     "company_link": "https://princedecors.com",
     "company_address": "NO:6/64,balaraman first cross street,Nanmangalam,Chennai-600117.",
     "facebook_link": "https://www.facebook.com/princedecors/",
@@ -118,6 +134,7 @@
     "linkedin_link": "https://www.linkedin.com/in/elavarasan92",
     "instagram_link": "https://www.instagram.com/princedecors/",
     "youtube_link": "https://www.youtube.com/watch?v=h9G6Pv3or3c",
+	"payment_link":"https://rzp.io/i/OJy8wWO",
     "other_payment_link": "https://rzp.io/i/OJy8wWO",
     "google_map_link": "https://goo.gl/maps/De72fPVZ8tP884eM9"
 }),
@@ -131,9 +148,14 @@
         alert(JSON.stringify(data));
           alert('Hello ' + data + '! You have successfully accessed to /api/profile.');
         },
-        error: function() {
-          alert("Sorry, ERROR occured.");
-        }
+       error: function (xhr, status, error) {
+					var err= JSON.parse(xhr.responseText);
+					console.log("xhr.responseText : " + xhr.responseText);
+					console.log("error message : " + err.error);
+					console.log(xhr.status);
+					console.log("status : " + status);
+					console.log("error : " + error);
+				}
       });
     });
 	
@@ -158,9 +180,14 @@
 		  }else{
 		   console.log('no Visiting Card create new ');
         }},
-        error: function() {
-          alert("Login Failed");
-        }
+        error: function (xhr, status, error) {
+					var err= JSON.parse(xhr.responseText);
+					console.log("xhr.responseText : " + xhr.responseText);
+					console.log("error message : " + err.error);
+					console.log(xhr.status);
+					console.log("status : " + status);
+					console.log("error : " + error);
+				}
       });
     });
 	
@@ -186,9 +213,14 @@
 		   console.log('no Visiting Card create new ');
         }
         },
-        error: function() {
-          alert("Login Failed");
-        }
+        error: function (xhr, status, error) {
+					var err= JSON.parse(xhr.responseText);
+					console.log("xhr.responseText : " + xhr.responseText);
+					console.log("error message : " + err.error);
+					console.log(xhr.status);
+					console.log("status : " + status);
+					console.log("error : " + error);
+				}
       });
     });
     $('#goodLogin').click(function() {
@@ -212,9 +244,14 @@
 		   console.log('no Visiting Card create new ');
         }
         },
-        error: function() {
-          alert("Login Failed");
-        }
+        error: function (xhr, status, error) {
+					var err= JSON.parse(xhr.responseText);
+					console.log("xhr.responseText : " + xhr.responseText);
+					console.log("error message : " + err.error);
+					console.log(xhr.status);
+					console.log("status : " + status);
+					console.log("error : " + error);
+				}
       });
     });
     $('#badLogin').click(function() {
@@ -229,11 +266,62 @@
         success: function(data) {
           alert("ERROR: it is not supposed to alert.");
         },
-        error: function() {
-          alert("Login Failed");
-        }
+        error: function (xhr, status, error) {
+					var err= JSON.parse(xhr.responseText);
+					console.log("xhr.responseText : " + xhr.responseText);
+					console.log("error message : " + err.error);
+					console.log(xhr.status);
+					console.log("status : " + status);
+					console.log("error : " + error);
+				}
       });
     });
+	
+	$('#createDummyCard').click(function() {
+		$.ajax({
+			type: 'POST',
+			url: baseUrl + 'visiting_cards',
+			contentType: "application/json",
+			data: JSON.stringify({
+				"user_name": "",
+				"email": "",
+				"mobile_no": "",
+				"company_name": "",
+				"designation": "",
+				"services_provided": "",
+				"company_link": "",
+				"company_address": "",
+				"facebook_link": "",
+				"messenger_link": "",
+				"twitter_link": "",
+				"linkedin_link": "",
+				"instagram_link": "",
+				"youtube_link": "",
+				"payment_link": "",
+				"other_payment_link": "",
+				"google_map_link": ""
+			}),
+			beforeSend: function (xhr) {
+				if (localStorage.token) {
+					xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.token);
+				}
+			},
+			success: function (data) {
+				console.log(JSON.stringify(data));
+				alert(JSON.stringify(data));
+				alert('Hello ' + data + '! You have successfully accessed to /api/profile.');
+			},
+			error: function (xhr, status, error) {
+				var err= JSON.parse(xhr.responseText);
+				console.log("xhr.responseText : " + xhr.responseText);
+				console.log("error message : " + err.error);
+				console.log(xhr.status);
+				console.log("status : " + status);
+				console.log("error : " + error);
+			}
+		});
+	});
+	
     $('#logout').click(function() {
       localStorage.clear();
     });
