--- a/modal.html
+++ b/modal.html
@@ -19,14 +19,15 @@
       <div class="modal-content">
         <div class="modal-header" style="background-color: #337ab7;">
           <button style="font-weight: 700; color: #fff; text-shadow: 0 1px 0 #fff; opacity: 6;" type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 style="font-weight: 900;color: #fff; text-align: center;" class="modal-title" id="myModalLabel">Modal title</h4>
+          <h4 style="font-weight: 900;color: #fff; text-align: center;" class="modal-title" id="myModalLabel">Choose</h4>
         </div>
         <div class="modal-body">
-          <p>My elavarasan Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad sed dolores iusto ab vero tempora in earum accusantium quas iure repellendus fugit ipsa reiciendis. Id illo natus sequi ex eveniet!</p>
+		 <a class="btn btn-primary btn-lg" href="editExtraCard.html" role="button">Add Extra Details</a>
+           <a class="btn btn-primary btn-lg" href="viewCard.html" role="button">View Card</a>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <!--<button type="button" class="btn btn-primary">Save changes</button>-->
         </div>
       </div>
       <!-- /.modal-content -->
