--- a/editCard.html
+++ b/editCard.html
@@ -60,6 +60,7 @@
 	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
+	<script src="/static/assets/js/jquery.populate.js"></script>
 	<script src="/static/assets/js/edit_card.js"></script>
 </body>
 </html>
