--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@
                   <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
                      <div class="box featured" data-aos="zoom-in" data-aos-delay="200">
                         <h3>Business</h3>
-                        <h4><sup>&#x20a8;</sup>99<span> / For Lifetime</span></h4>
+                        <h4><sup>&#x20a8;</sup>99<span> / Offer Price</span></h4>
                         <ul>
-                           <li>Free Support for lifetime</li>
-                           <li>AnyTime Edit</li>
+                           <li>Free Support</li>
+                           <!--<li>AnyTime Edit</li>-->
                            <li>Always online</li>
-                           <li>Best Customer Support</li>
+                           <li>Best Customer Service</li>
                         </ul>
                         <div class="btn-wrap">
                            <a href="#pricing" id="buyNow" class="buyNow btn-buy">Buy Now</a>
