--- a/viewCard.html
+++ b/viewCard.html
@@ -28,7 +28,7 @@
                      <div class="card no_margin">
                         <!--<img class="card-img-top" src="assets/images/background/profile-bg.jpg" alt="Card image cap">-->
                         <div class="top_background little-profile text-center">
-                           <div class="pro-img"><img id="profile_picture_link" src ="/static/assets/img/profile_dummy.PNG" alt="user" /></div>
+                           <div class="pro-img"><img id="profile_picture_link" src ="/static/assets/img/profile_dummy.png" alt="user" /></div>
                         </div>
                         <div class="card-block little-profile text-center"  style="padding-left: 15px;padding-right: 15px;    padding-top: 15px;">
                            <h3 id ="user_name" class="m-b-0 name_style"></h3>
