--- a/viewCard.html
+++ b/viewCard.html
@@ -37,34 +37,34 @@
                               font-size: 1rem !important;
                               line-height: 0.8rem;
                               margin-bottom: 21px;" ></p>
-                           <div class="row heading_style">
-                              <h3 class ="heading_font"><a  id ="follow_me" >Follow Me : </a></h3>
+                           <div id ="follow_me_heading" class="row heading_style">
+                              <h3 class ="heading_font"><a   >Follow Me : </a></h3>
                            </div>
                            <div class="row center_align">
                               <div class="social-buttons">
                                  <!-- facebook  Button -->
-                                 <a id="facebook_link"  target="blank" class="social-margin">
+                                 <a id="facebook_link" class="social-margin">
                                     <div class="social-icon facebook">
                                        <i class="fab fa-facebook-f" aria-hidden="true"></i> 
                                        <span id ="user_name" >facebook</span>
                                     </div>
                                  </a>
                                  <!-- TwitterButton -->
-                                 <a id="twitter_link"  target="blank" class="social-margin">
+                                 <a id="twitter_link" class="social-margin">
                                     <div class="social-icon twitter">
                                        <i class="fab fa-twitter" aria-hidden="true"></i>
                                        <span id ="user_name" >twitter</span>
                                     </div>
                                  </a>
                                  <!-- LinkedIn Button -->
-                                 <a id="linkedin_link" class="social-margin" target="blank">
+                                 <a id="linkedin_link" class="social-margin" >
                                     <div class="social-icon linkedin">
                                        <i class="fab fa-linkedin" aria-hidden="true"></i>
                                        <span id ="user_name" >linkedin</span>
                                     </div>
                                  </a>
                                  <!-- Instagram Button -->
-                                 <a id="instagram_link"  class="social-margin" target="blank">
+                                 <a id="instagram_link"  class="social-margin" >
                                     <div class="social-icon instagram">
                                        <i class="fab fa-instagram" aria-hidden="true"></i>
                                        <span id ="user_name" >instagram</span>
@@ -73,47 +73,47 @@
                               </div>
                            </div>
                            <div class="row heading_style">
-                              <h3 class ="heading_font"><a  id ="user_name" >Contact : </a></h3>
+                              <h3 class ="heading_font"><a  >Contact : </a></h3>
                            </div>
                            <div class="row center_align">
                               <div class="social-buttons">
                                  <!-- call  Button -->
-                                 <a  id ="mobile_no"  target="blank" class="social-margin">
+                                 <a  id ="mobile_no" class="social-margin">
                                     <div class="social-icon call">
                                        <i class="fas fa-phone-alt" aria-hidden="true"></i> 
                                        <span>call</span>
                                     </div>
                                  </a>
                                  <!-- email -->
-                                 <a  id ="email"  target="blank" class="social-margin">
+                                 <a  id ="email" class="social-margin">
                                     <div class="social-icon email">
                                        <i class="fas fa-envelope" aria-hidden="true"></i>
                                        <span>email</span>
                                     </div>
                                  </a>
                                  <!-- whatsapp Button -->
-                                 <a  id ="whatsapp_link"  class="social-margin" target="blank">
+                                 <a  id ="whatsapp_link"  class="social-margin" >
                                     <div class="social-icon whatsapp">
                                        <i class="fab fa-whatsapp" aria-hidden="true"></i>
                                        <span>whatsapp</span>
                                     </div>
                                  </a>
                                  <!-- share save contact to address book card Button -->
-                                 <a  id ="user_name"  href="assets/vcard/Elavarasan.vcf" class="social-margin" >
+                                 <!--<a  id ="user_name"  href="assets/vcard/Elavarasan.vcf" class="social-margin" >
                                     <div class="social-icon contact">
                                        <i class="fas fa-address-book" aria-hidden="true"></i>
                                        <span>Save</span>
                                     </div>
-                                 </a>
+                                 </a>-->
                                  <!-- Payment Button -->
-                                 <a  id ="payment_link" class="social-margin" target="blank">
+                                 <a  id ="payment_link" class="social-margin" >
                                     <div class="social-icon payment">
                                        <i class="fas fa-money-check-alt" aria-hidden="true"></i>
                                        <span>payme</span>
                                     </div>
                                  </a>
                                  <!-- Facebook messenger Button -->
-                                 <a  id ="messenger_link" class="social-margin" target="blank">
+                                 <a  id ="messenger_link" class="social-margin" >
                                     <div class="social-icon messenger">
                                        <i class="fab fa-facebook-messenger" aria-hidden="true"></i>
                                        <span>messenger</span>
@@ -128,27 +128,27 @@
                                     </a>-->
                               </div>
                            </div>
-                           <div class="row heading_style">
-                              <h3 class ="heading_font"><a  id ="user_name">Company : </a></h3>
+                           <div id ="company_heading" class="row heading_style">
+                              <h3 class ="heading_font"><a  >Company : </a></h3>
                            </div>
                            <div class="row center_align">
                               <div class="social-buttons">
                                  <!-- facebook  Button -->
-                                 <!--<a href="http://www.facebook.com" target="blank" class="social-margin">
+                                 <!--<a href="http://www.facebook.com"class="social-margin">
                                     <div class="social-icon business">
                                        <i class="far fa-building" aria-hidden="true"></i> 
                                     <span>business</span>
                                     </div>
                                     </a>-->
                                  <!-- TwitterButton -->
-                                 <a  id ="company_link" target="blank" class="social-margin">
+                                 <a  id ="company_link"class="social-margin">
                                     <div class="social-icon website">
                                        <i class="fa fa-globe" aria-hidden="true"></i>
                                        <span>website</span>
                                     </div>
                                  </a>
                                  <!-- LinkedIn Button -->
-                                 <a id ="google_map_link"  class="social-margin" target="blank">
+                                 <a id ="google_map_link"  class="social-margin">
                                     <div class="social-icon location">
                                        <i class="fas fa-map-marker-alt"aria-hidden="true"></i>
                                        <span>location</span>
@@ -157,19 +157,19 @@
                               </div>
                            </div>
                            <div class="row heading_style">
-                              <h3 class ="heading_font"><a id ="user_name"  >Share this Card : </a></h3>
+                              <h3 class ="heading_font"><a  >Share this Card : </a></h3>
                            </div>
                            <div class="row center_align">
                               <div class="social-buttons">
                                  <!-- facebook  Button -->
-                                 <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//wishmecards.com/profile" target="blank" class="social-margin">
+                                 <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//wishmecards.com/profile"class="social-margin" target="blank">
                                     <div class="social-icon facebook">
                                        <i class="fab fa-facebook-f" aria-hidden="true"></i> 
                                        <span>facebook</span>
                                     </div>
                                  </a>
                                  <!-- TwitterButton -->
-                                 <a href="https://twitter.com/intent/tweet?text=https%3A//wishmecards.com/profile" target="blank" class="social-margin">
+                                 <a href="https://twitter.com/intent/tweet?text=https%3A//wishmecards.com/profile"class="social-margin" target="blank">
                                     <div class="social-icon twitter">
                                        <i class="fab fa-twitter" aria-hidden="true"></i>
                                        <span>twitter</span>
