--- a/jwtAuth.html
+++ b/jwtAuth.html
@@ -27,7 +27,7 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript">
   //var baseUrl = "https://einvite.tech/";
-  var baseUrl = "http://localhost:3500/";
+  var baseUrl = "https://einvite.tech/";
   $(document).ready(function() {
   
     $('#getVisitingCardById').click(function() {
