--- a/gsign.html
+++ b/gsign.html
@@ -24,7 +24,7 @@
           document.getElementById('name').innerText = "Signed in: " +
               googleUser.getBasicProfile().getName();
         }, function(error) {
-          alert(JSON.stringify(error, undefined, 2));
+          console.log(JSON.stringify(error, undefined, 2));
         });
   }
   
