--- a/editCard.html
+++ b/editCard.html
@@ -23,7 +23,7 @@
 				</div>-->
 				<div class="parent">
 					<a class="child" href="https://einvite.tech/upload_image">
-					<img class="child"  id="profile_pic" src="/static/assets/img/profile_dummy.PNG"/>
+					<img class="child"  id="profile_pic" src="/static/assets/img/profile_dummy.png"/>
 					</a>
 				</div>
 				<div style="height: 10px; width: auto;" class="parent">
