--- a/viewCard.html
+++ b/viewCard.html
@@ -162,28 +162,28 @@
                            <div class="row center_align">
                               <div class="social-buttons">
                                  <!-- facebook  Button -->
-                                 <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//wishmecards.com/profile"class="social-margin" target="blank">
+                                 <a id="fb_share" href=""class="social-margin" target="blank">
                                     <div class="social-icon facebook">
                                        <i class="fab fa-facebook-f" aria-hidden="true"></i> 
                                        <span>facebook</span>
                                     </div>
                                  </a>
                                  <!-- TwitterButton -->
-                                 <a href="https://twitter.com/intent/tweet?text=https%3A//wishmecards.com/profile"class="social-margin" target="blank">
+                                 <a id="twitter_share" href=""class="social-margin" target="blank">
                                     <div class="social-icon twitter">
                                        <i class="fab fa-twitter" aria-hidden="true"></i>
                                        <span>twitter</span>
                                     </div>
                                  </a>
                                  <!-- LinkedIn Button -->
-                                 <a href="https://www.linkedin.com/shareArticle?mini=true&url=https%3A//wishmecards.com/profile&title=&summary=&source=" class="social-margin" target="blank">
+                                 <a id="linkedin_share" href="" class="social-margin" target="blank">
                                     <div class="social-icon linkedin">
                                        <i class="fab fa-linkedin" aria-hidden="true"></i>
                                        <span>linkedin</span>
                                     </div>
                                  </a>
                                  <!-- Instagram Button -->
-                                 <a href="whatsapp://send?text=https%3A//wishmecards.com/profile!" data-action="share/whatsapp/share" class="social-margin" target="blank">
+                                 <a id="whatsapp_share" href="" data-action="share/whatsapp/share" class="social-margin" target="blank">
                                     <div class="social-icon whatsapp">
                                        <i class="fab fa-whatsapp" aria-hidden="true"></i>
                                        <span>whatsapp</span>
