--- a/editCard.html
+++ b/editCard.html
@@ -22,7 +22,7 @@
 					<img  alt="Avatar" style="margin: auto; border-radius: 50%; width:130px" src ="/static/assets/img/profile_dummy.PNG" >
 				</div>-->
 				<div class="parent">
-					<a class="child" href="https://einvite.tech/upload_image">
+					<a class="child" href="upload_image.html">
 					<img class="child"  id="profile_pic" src="/static/assets/img/profile_dummy.png"/>
 					</a>
 				</div>
