--- a/upload_image.html
+++ b/upload_image.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>How to upload Image file using AJAX and jQuery</title>
-   
+    <title>Upload Profile Picture</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="static/assets/css/upload_image_style.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<link href="/static/assets/css/css-loader.css" rel="stylesheet">
@@ -18,10 +18,10 @@
                 <img src="/static/assets/img/profile_dummy.png" id="img" width="100" height="100">
             </div>
             <div >
-			<label class="img_label"> Select
+			<label class="img_label"> Select Image 
                 <input type="file" id="file" name="file" />
 				</label>
-                <input type="button" class="button" value="Upload" id="but_upload">
+                <input type="button" class="button" value="Upload Image" id="but_upload">
             </div>
         </form>
     </div>
