--- a/login.html
+++ b/login.html
@@ -17,6 +17,8 @@
 	  <link href="/static/assets/css/css-loader.css" rel="stylesheet">
    </head>
    <body>
+   <a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; z-index:999;" href="index.html"><i class="fas fa-home"></i> Digital Card
+</a>
       <!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
       <body>
 	  <div id="loader" class="loader loader-default is-active"></div>
