--- a/viewCard.html
+++ b/viewCard.html
@@ -17,6 +17,8 @@
       <!-- You can change the theme colors from here -->
    </head>
    <body class="fix-header fix-sidebar card-no-border">
+   <a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; z-index:999;" href="index.html"><i class="fas fa-home"></i> Digital Card
+</a>
       <div id="main-wrapper">
          <div class="page-wrapper no_pad_bottom">
             <div class="container-fluid pad_15 no_pad_bottom">
@@ -30,7 +32,7 @@
                         <div class="top_background little-profile text-center">
                            <div class="pro-img"><img id="profile_picture_link" src ="/static/assets/img/profile_dummy.png" alt="user" /></div>
                         </div>
-                        <div class="card-block little-profile text-center"  style="padding-left: 15px;padding-right: 15px;    padding-top: 15px;">
+                        <div class="card-block little-profile text-center"  style="padding-left: 15px;padding-right: 15px;    padding-top: 15px; margin-bottom:50px;">
                            <h3 id ="user_name" class="m-b-0 name_style"></h3>
                            <p id ="company_name" class="designation" style="margin-block-end: 0em; margin-bottom: 5px;" ></p>
                            <p id ="designation" class="designation" style="    margin-block-end: 0em;
