--- a/signup.html
+++ b/signup.html
@@ -8,12 +8,13 @@
 	<!-- Font-->
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css">
+	<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 	<!-- Main Style Css -->
     <link rel="stylesheet" href="/static/assets/css/form_style.css"/>
 	<link href="/static/assets/css/css-loader.css" rel="stylesheet">
 </head>
 <body class="form-v2">
-<a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; z-index:999;" href="index.html"><i class="fas fa-home"></i> Digital Card
+<a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="index.html"><i class="fas fa-home"></i> Digital Card
 </a>
 <div id="loader" class="loader loader-default is-active"></div>
 	<div class="page-content">
