--- a/viewCard.html
+++ b/viewCard.html
@@ -17,7 +17,7 @@
       <!-- You can change the theme colors from here -->
    </head>
    <body class="fix-header fix-sidebar card-no-border">
-   <a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="index.html"><i class="fas fa-home"></i> Digital Card
+   <a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="index.html"><i class="fas fa-home"></i> DigitalBizCard
 </a>
       <div id="main-wrapper">
          <div class="page-wrapper no_pad_bottom">
