--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 	  <link href="/static/assets/css/css-loader.css" rel="stylesheet">
    </head>
    <body>
-   <a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="index.html"><i class="fas fa-home"></i> Digital Card
+   <a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="index.html"><i class="fas fa-home"></i> DigitalBizCard
 </a>
       <!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
       <body>
