--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
 	<link href="/static/assets/css/css-loader.css" rel="stylesheet">
 </head>
 <body class="form-v2">
-<a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="index.html"><i class="fas fa-home"></i> Digital Card
+<a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="index.html"><i class="fas fa-home"></i> DigitalBizCard
 </a>
 <div id="loader" class="loader loader-default is-active"></div>
 	<div class="page-content">
