--- a/editExtraCard.html
+++ b/editExtraCard.html
@@ -11,9 +11,39 @@
       <!-- Main Style Css -->
       <link rel="stylesheet" href="/static/assets/css/form_style.css"/>
       <link href="/static/assets/css/css-loader.css" rel="stylesheet">
+	  	  <style>
+	  *{padding:0;margin:0;}
+
+body{
+	font-family:Verdana, Geneva, sans-serif;
+	font-size:18px;
+	background-color:#CCC;
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:8px;
+	background-color:#0C9;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+	z-index:999;
+}
+
+.my-float{
+	margin-top:22px;
+}
+</style>
    </head>
    <body class="form-v2">
    <a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="index.html"><i class="fas fa-home"></i> DigitalBizCard
+</a>
+<a href="index.html" class="float">
+<i style="margin-top: 18px;" class="fas fa-home"></i>
 </a>
       <div id="loader" class="loader loader-default is-active"></div>
       <div class="page-content">
