--- a/viewCard.html
+++ b/viewCard.html
@@ -15,9 +15,39 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
       <link href="assets/css/profile_style.css" rel="stylesheet">
       <!-- You can change the theme colors from here -->
+	  <style>
+	  *{padding:0;margin:0;}
+
+body{
+	font-family:Verdana, Geneva, sans-serif;
+	font-size:18px;
+	background-color:#CCC;
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:8px;
+	background-color:#0C9;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+	z-index:999;
+}
+
+.my-float{
+	margin-top:22px;
+}
+</style>
    </head>
    <body class="fix-header fix-sidebar card-no-border">
-   <a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="index.html"><i class="fas fa-home"></i> DigitalBizCard
+   <a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="editCard.html"><i class="fas fa-edit"></i> Edit Card
+</a>
+<a href="index.html" class="float">
+<i style="margin-top: 18px;" class="fas fa-home"></i>
 </a>
       <div id="main-wrapper">
          <div class="page-wrapper no_pad_bottom">
@@ -32,6 +62,7 @@
                         <div class="top_background little-profile text-center">
                            <div class="pro-img"><img id="profile_picture_link" src ="/static/assets/img/profile_dummy.png" alt="user" /></div>
                         </div>
+						
                         <div class="card-block little-profile text-center"  style="padding-left: 15px;padding-right: 15px;    padding-top: 15px; margin-bottom:50px;">
                            <h3 id ="user_name" class="m-b-0 name_style"></h3>
                            <p id ="company_name" class="designation" style="margin-block-end: 0em; margin-bottom: 5px;" ></p>
