--- a/viewCard.html
+++ b/viewCard.html
@@ -44,9 +44,9 @@ body{
 </style>
    </head>
    <body class="fix-header fix-sidebar card-no-border">
-   <a style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="editCard.html"><i class="fas fa-edit"></i> Edit Card
+   <a id ="editCard" style="display:inline-block;width: 100%; padding-top:10px; padding-bottom:10px; background-color:#7460ee; color:white; text-align:center; bottom:0; position:fixed; font-weight: 900; text-decoration: none; z-index:999;" href="editCard.html"><i class="fas fa-edit"></i> Edit Card
 </a>
-<a href="index.html" class="float">
+<a id ="home"   href="index.html" class="float">
 <i style="margin-top: 18px;" class="fas fa-home"></i>
 </a>
       <div id="main-wrapper">
