--- a/editCard.html
+++ b/editCard.html
@@ -83,11 +83,11 @@ body{
 				</div>
 				<div class="form-row">
 					<label for="company_address">CompanyAddress:</label>
-					<textarea id="company_address" name="company_address" class ="address_style" minlength="5" maxlength="200" placeholder="Address"></textarea>
+					<textarea id="company_address" name="company_address" class ="address_style" minlength="5" maxlength="200" placeholder="Optional"></textarea>
 				</div>
 				<div class="form-row">
 					<label for="services_provided">Services Provided:</label>
-					<input type="text" name="services_provided" id="services_provided" minlength="5" maxlength="200" placeholder="Ex: construction" class="input-text">
+					<input type="text" name="services_provided" id="services_provided" minlength="5" maxlength="200" placeholder="Optional" class="input-text">
 				</div>
 				<div id="serverError" class="form-row serverError">
 					<label class="duplicateEmail" for="serverError">Internal Server error </label>
