--- a/login.html
+++ b/login.html
@@ -33,11 +33,11 @@
                            <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="button" onclick="fbLogin()" id="fbLink"><i class="fab fa-facebook-f mr-2"></i>Continue with Facebook</button>
                            <hr class="my-4">
                            <div class="form-label-group">
-                              <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email address" value ="rameshelava@gmail.com" required autofocus>
+                              <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email address" required autofocus>
                               <label for="inputEmail">Email address</label>
                            </div>
                            <div class="form-label-group">
-                              <input type="password" id="inputPassword"  name="inputPassword" class="form-control" placeholder="Password" value ="default"  required>
+                              <input type="password" id="inputPassword"  name="inputPassword" class="form-control" placeholder="Password"  required>
                               <label for="inputPassword">Password</label>
                            </div>
                            <div id="invalid_cred" class="invalid_cred custom-control  mb-3">
