--- a/elavarasan.html
+++ b/elavarasan.html
@@ -100,12 +100,12 @@
                                     </div>
                                  </a>
 								  <!-- share save contact to address book card Button -->
-                                 <a href="assets/vcard/Elavarasan.vcf" class="social-margin" >
+                                 <!--<a href="assets/vcard/Elavarasan.vcf" class="social-margin" >
                                     <div class="social-icon contact">
                                        <i class="fas fa-address-book" aria-hidden="true"></i>
 									    <span>Save</span>
                                     </div>
-                                 </a>
+                                 </a>-->
 								 <!-- Payment Button -->
                                  <a href="https://pages.razorpay.com/pl_ElRHr5q55UvKL0/view" class="social-margin" target="blank">
                                     <div class="social-icon payment">
