--- a/index.html
+++ b/index.html
@@ -21,18 +21,7 @@
       <link href="/static/assets/vendor/aos/aos.css" rel="stylesheet">
       <!-- Template Main CSS File -->
       <link href="/static/assets/css/style.css" rel="stylesheet">
-      <script>
-         let d = new Date();
-         console.log("Today's date is " + d);
-         const Http = new XMLHttpRequest();
-         const url='https://einvite.tech/posts';
-         Http.open("GET", url);
-         Http.send();
-         
-         Http.onreadystatechange = (e) => {
-         console.log(Http.responseText)
-         }
-      </script>
+     
    </head>
    <body>
       <!-- ======= Header ======= -->
@@ -91,6 +80,7 @@
                      <h2>We are team of talanted designers making websites</h2>
                      <div class="text-center text-lg-left">
                         <a href="#pricing" id="buyNow" class="buyNow btn-get-started scrollto">Buy Now</a>
+						<a href="elavarasan.html" id="demo" class="buyNow btn-get-started scrollto">Demo</a>
                      </div>
                   </div>
                </div>
@@ -676,14 +666,14 @@
                            </p>
                         </div>
                      </li>
-                     <li data-aos="fade-up" data-aos-delay="300">
+                     <!--<li data-aos="fade-up" data-aos-delay="300">
                         <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-4" class="collapsed">What is the Validity of My vCard ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                         <div id="faq-list-4" class="collapse" data-parent=".faq-list">
                            <p>
                               It’s one time payment of Rs. 99 . You can access your vCard for Lifetime (fairly longer period of time).
                            </p>
                         </div>
-                     </li>
+                     </li>-->
                      <li data-aos="fade-up" data-aos-delay="400">
                         <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-5" class="collapsed">Still Have Questions ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                         <div id="faq-list-5" class="collapse" data-parent=".faq-list">
@@ -724,7 +714,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left" data-aos-delay="200">
+                  <!--<div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left" data-aos-delay="200">
                      <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                         <div class="form-row">
                            <div class="col-md-6 form-group">
@@ -751,7 +741,7 @@
                         </div>
                         <div class="text-center"><button type="submit">Send Message</button></div>
                      </form>
-                  </div>
+                  </div>-->
                </div>
             </div>
          </section>
@@ -802,13 +792,13 @@
                         <li><i class="bx bx-chevron-right"></i> <a href="#" class="disable_a">Graphic Design</a></li>
                      </ul>
                   </div>
-                  <div class="col-lg-4 col-md-6 footer-newsletter">
+                  <!--<div class="col-lg-4 col-md-6 footer-newsletter">
                      <h4>Our Newsletter</h4>
                      <p>Please subscribe to our newsletter</p>
                      <form action="" method="post">
                         <input type="email" name="email"><input type="submit" value="Subscribe">
                      </form>
-                  </div>
+                  </div>-->
                </div>
             </div>
          </div>
