--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                      <h2>We are team of talanted designers making websites</h2>
                      <div class="text-center text-lg-left">
                         <a href="#pricing" id="buyNow" class="buyNow btn-get-started scrollto">Buy Now</a>
-						<a href="elavarasan.html" id="demo" class="buyNow btn-get-started scrollto">Demo</a>
+						<a href="elavarasan.html" id="demo" target="blank" class=" btn-get-started scrollto">Demo</a>
                      </div>
                   </div>
                </div>
