--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                      <h2>We are team of talanted designers making websites</h2>
                      <div class="text-center text-lg-left">
                         <a href="#pricing" id="buyNow" class="buyNow btn-get-started scrollto">Buy Now</a>
-						<a href="elavarasan.html" id="demo" target="blank" class=" btn-get-started scrollto">Demo</a>
+						<a href="elavarasan.html" id="demo" target="blank"class=" btn-get-started scrollto">Demo</a>
                      </div>
                   </div>
                </div>
@@ -764,11 +764,11 @@
                            <strong>Email:</strong> rameshelava@gmail.com<br>
                         </p>
                         <div class="social-links mt-3">
-                           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                           <a href="https://twitter.com/elavara27570054" class="twitter"><i class="bx bxl-twitter"></i></a>
+                           <a href="https://www.facebook.com/princedecors/" class="facebook"><i class="bx bxl-facebook"></i></a>
+                           <a href="https://www.instagram.com/princedecors" class="instagram"><i class="bx bxl-instagram"></i></a>
+                           <a href="mailto:princedecors92@gmail.com?Subject=Hello%20Prince%20Decoration%20Needed" class="google-plus"><i class="bx bxl-skype"></i></a>
+                           <a href="https://www.linkedin.com/in/elavarasan92/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
