Update index.html and privacy_policy.html

--- a/index.html
+++ b/index.html
@@ -820,6 +820,7 @@
                         <li><i class="bx bx-chevron-right"></i> <a href="#features">Features</a></li>
                         <li><i class="bx bx-chevron-right"></i> <a href="#gallery">Gallery</a></li>
                         <li><i class="bx bx-chevron-right"></i> <a href="#pricing">Pricing</a></li>
+						<li><i class="bx bx-chevron-right"></i> <a href="privacy_policy.html">Privacy Policy</a></li>
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 footer-links">
