--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    </head>
    <body>
 <!-- Load Facebook SDK for JavaScript -->
-      <div id="fb-root"></div>
+    <!--  <div id="fb-root"></div>
       <script>
         window.fbAsyncInit = function() {
           FB.init({
@@ -55,15 +55,15 @@
         js = d.createElement(s); js.id = id;
         js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
         fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
+      }(document, 'script', 'facebook-jssdk'));</script>-->
 
       <!-- Your customer chat code -->
-      <div class="fb-customerchat"
+     <!-- <div class="fb-customerchat"
         attribution=setup_tool
         page_id="102828641276607"
   logged_in_greeting="Hi! Thanks for visiting our page.Please share your mobile no."
   logged_out_greeting="Hi! Thanks for visiting our page.Please share your mobile no.">
-      </div>
+      </div>-->
       <!-- ======= Header ======= -->
       <header id="header" class="fixed-top d-flex align-items-center">
          <div class="container d-flex align-items-center">
