--- a/editCard.html
+++ b/editCard.html
@@ -63,7 +63,7 @@ body{
 				</div>
 				<div class="form-row">
 					<label for="user_name">Name:</label>
-					<input type="text" name="user_name" id="user_name" class="input-text"  minlength="1" maxlength="50" required >
+					<input type="text" name="user_name" id="user_name" class="input-text"  minlength="1" maxlength="50" pattern="[a-zA-Z]+" required >
 				</div>
 				<div class="form-row">
 					<label for="designation">Designation:</label>
