--- a/faiz_latheef.html
+++ b/faiz_latheef.html
@@ -214,6 +214,9 @@
                                  </a>
                               </div>
                            </div>
+						   <div class="row heading_style center_align">
+							  <h3 class ="footer_font"><a href="https://pages.razorpay.com/pl_ElRHr5q55UvKL0/view">Pay 99 rs to Activate</a></h3>
+							  </div>
 						    <!--<div class="row heading_style center_align">
 							  <h3 class ="footer_font"><a href="https://api.whatsapp.com/send?phone=+918531990331">Powered By : Elavarasan - 8531990331</a></h3>
 							  </div>-->
