--- a/faiz_latheef.html
+++ b/faiz_latheef.html
@@ -215,7 +215,7 @@
                               </div>
                            </div>
 						   <div class="row heading_style center_align">
-							  <h3 class ="footer_font"><a href="https://pages.razorpay.com/pl_ElRHr5q55UvKL0/view">Pay 99 rs to Activate</a></h3>
+							  <h3 class ="footer_font"><a style="font-size: 78px !important;" href="https://pages.razorpay.com/pl_ElRHr5q55UvKL0/view">Pay 99 rs to Activate</a></h3>
 							  </div>
 						    <!--<div class="row heading_style center_align">
 							  <h3 class ="footer_font"><a href="https://api.whatsapp.com/send?phone=+918531990331">Powered By : Elavarasan - 8531990331</a></h3>
