--- a/faiz_latheef.html
+++ b/faiz_latheef.html
@@ -54,42 +54,6 @@
     font-size: 1rem !important;
     line-height: 0.8rem;
     margin-bottom: 21px;" >Wedding Planner</p> -->
-							  <div class="row heading_style">
-							  <h3 class ="heading_font"><a href="">Follow Me : </a></h3>
-							  </div>
-                           <div class="row center_align">
-                              <div class="social-buttons">
-                                 <!-- facebook  Button -->
-                                 <a href="https://www.facebook.com/faiz.latheef.7" target="blank" class="social-margin">
-                                    <div class="social-icon facebook">
-                                       <i class="fab fa-facebook-f" aria-hidden="true"></i> 
-									   <span>facebook</span>
-                                    </div>
-									 
-                                 </a>
-                                 <!-- TwitterButton -->
-                                 <!--<a href="https://twitter.com/elavara27570054" target="blank" class="social-margin">
-                                    <div class="social-icon twitter">
-                                       <i class="fab fa-twitter" aria-hidden="true"></i>
-									    <span>twitter</span>
-                                    </div>
-                                 </a>-->
-                                 <!-- LinkedIn Button -->
-                                 <!--<a href="https://www.linkedin.com/in/elavarasan92/" class="social-margin" target="blank">
-                                    <div class="social-icon linkedin">
-                                       <i class="fab fa-linkedin" aria-hidden="true"></i>
-									    <span>linkedin</span>
-                                    </div>
-                                 </a>-->
-                                 <!-- Instagram Button -->
-                                 <!--<a href="https://www.instagram.com/princedecors/" class="social-margin" target="blank">
-                                    <div class="social-icon instagram">
-                                       <i class="fab fa-instagram" aria-hidden="true"></i>
-									    <span>instagram</span>
-                                    </div>
-                                 </a>-->
-                              </div>
-                           </div>
 						    <div class="row heading_style">
 							  <h3 class ="heading_font"><a href="">Contact : </a></h3>
 							  </div>
@@ -114,6 +78,13 @@
                                     <div class="social-icon whatsapp">
                                        <i class="fab fa-whatsapp" aria-hidden="true"></i>
 									   <span>whatsapp</span>
+                                    </div>
+                                 </a>
+
+								 <a href="sms:+919886164138&body=Hi" class="social-margin" >
+                                    <div class="social-icon contact">
+                                       <i class="fas fa-sms" aria-hidden="true"></i>
+									    <span>SMS</span>
                                     </div>
                                  </a>
 								  <!-- share save contact to address book card Button -->
@@ -214,6 +185,43 @@
                                  </a>
                               </div>
                            </div>
+						   						  <div class="row heading_style">
+							  <h3 class ="heading_font"><a href="">Follow Me : </a></h3>
+							  </div>
+                           <div class="row center_align">
+                              <div class="social-buttons">
+                                 <!-- facebook  Button -->
+                                 <a href="https://www.facebook.com/faiz.latheef.7" target="blank" class="social-margin">
+                                    <div class="social-icon facebook">
+                                       <i class="fab fa-facebook-f" aria-hidden="true"></i> 
+									   <span>facebook</span>
+                                    </div>
+									 
+                                 </a>
+                                 <!-- TwitterButton -->
+                                 <!--<a href="https://twitter.com/elavara27570054" target="blank" class="social-margin">
+                                    <div class="social-icon twitter">
+                                       <i class="fab fa-twitter" aria-hidden="true"></i>
+									    <span>twitter</span>
+                                    </div>
+                                 </a>-->
+                                 <!-- LinkedIn Button -->
+                                 <!--<a href="https://www.linkedin.com/in/elavarasan92/" class="social-margin" target="blank">
+                                    <div class="social-icon linkedin">
+                                       <i class="fab fa-linkedin" aria-hidden="true"></i>
+									    <span>linkedin</span>
+                                    </div>
+                                 </a>-->
+                                 <!-- Instagram Button -->
+                                 <!--<a href="https://www.instagram.com/princedecors/" class="social-margin" target="blank">
+                                    <div class="social-icon instagram">
+                                       <i class="fab fa-instagram" aria-hidden="true"></i>
+									    <span>instagram</span>
+                                    </div>
+                                 </a>-->
+                              </div>
+                           </div>
+	
 						   <!--<div class="row heading_style center_align">
 							  <h3 class ="footer_font"><a style="font-size: 78px !important;" href="https://pages.razorpay.com/pl_ElRHr5q55UvKL0/view">Pay 99 rs to Activate</a></h3>
 							  </div>-->
