--- a/elavarasan.html
+++ b/elavarasan.html
@@ -94,6 +94,12 @@
 									    <span>payme</span>
                                     </div>
                                  </a>
+								 <a href="tel:+918531990331" target="blank" class="social-margin">
+                                    <div class="social-icon linkedin">
+                                       <i class="fab fa-google" aria-hidden="true"></i>
+									    <span>GPay</span>
+                                    </div>
+                                 </a>
 								   <!-- Facebook messenger Button -->
                                  <a href="http://m.me/princedecors" class="social-margin" target="blank">
                                     <div class="social-icon messenger">
