--- a/tamil.html
+++ b/tamil.html
@@ -119,7 +119,7 @@ d),c.tick("tbsd_","wtsrt_"))}try{a=null,window.chrome&&window.chrome.csi&&(a=Mat
             <div class="row">
                <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
                   <div data-aos="zoom-out" class="aos-init aos-animate">
-                     <h1><font style="vertical-align: inherit;"><span><font style="vertical-align: inherit;">விஷ்மேகார்டுகள் @ 99 ரூபாய்</font></span><font style="vertical-align: inherit;"> மூலம் உங்கள் டிஜிட்டல் வணிக அட்டையை உருவாக்கவும்</font></font><span><font style="vertical-align: inherit;"></font></span></h1>
+                     <h1><font style="vertical-align: inherit;"><span><font style="vertical-align: inherit;">டிஜிட்டல் பிஸ்னஸ் கார்ட் @ 99 ரூபாய்</font></span><font style="vertical-align: inherit;"> மூலம் உங்கள் டிஜிட்டல் வணிக அட்டையை உருவாக்கவும்</font></font><span><font style="vertical-align: inherit;"></font></span></h1>
                      <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">நாங்கள் வலைத்தளங்களை உருவாக்கும் திறமையான வடிவமைப்பாளர்களின் குழு</font></font></h2>
                      <div class="text-center text-lg-left">
                         <a href="https://translate.googleusercontent.com/translate_c?depth=1&amp;hl=en&amp;pto=aue&amp;rurl=translate.google.com&amp;sl=en&amp;sp=nmt4&amp;tl=ta&amp;u=https://wishmecards.com/&amp;usg=ALkJrhjiFytMuK2fOjWZBBYmpj31VrBl0A#pricing" id="buyNow" class="buyNow btn-get-started scrollto"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> விலைக்கு வாங்கு</font></font></a>
