--- a/tamil.html
+++ b/tamil.html
@@ -166,12 +166,13 @@ d),c.tick("tbsd_","wtsrt_"))}try{a=null,window.chrome&&window.chrome.csi&&(a=Mat
                      </div>
                      <div class="icon-box aos-init" data-aos="zoom-in" data-aos-delay="200">
                         <div class="icon"><i class="ri-gift-2-fill"></i></div>
-                        <h4 class="title"><a href="https://translate.googleusercontent.com/translate_c?depth=1&amp;hl=en&amp;pto=aue&amp;rurl=translate.google.com&amp;sl=en&amp;sp=nmt4&amp;tl=ta&amp;u=https://wishmecards.com/&amp;usg=ALkJrhjiFytMuK2fOjWZBBYmpj31VrBl0A"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">இலக்கு மிகவும் திறமையாக செல்கிறது</font></font></a></h4>
+                        <h4 class="title"><a href="https://translate.googleusercontent.com/translate_c?depth=1&amp;hl=en&amp;pto=aue&amp;rurl=translate.google.com&amp;sl=en&amp;sp=nmt4&amp;tl=ta&amp;u=https://wishmecards.com/&amp;usg=ALkJrhjiFytMuK2fOjWZBBYmpj31VrBl0A"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">உங்கள் வாடிக்கையாளரை எளிதில் ஈர்க்க</font></font></a></h4>
                         <!--<p class="description">Whenever you shake a hand is working for you by collecting who you met, where you met, and a piece of contact information to remember them by.</p>-->
                      </div>
                      <div class="icon-box aos-init" data-aos="zoom-in" data-aos-delay="300">
                         <div class="icon"><i class="ri-contacts-fill"></i></div>
-                        <h4 class="title"><a href="https://translate.googleusercontent.com/translate_c?depth=1&amp;hl=en&amp;pto=aue&amp;rurl=translate.google.com&amp;sl=en&amp;sp=nmt4&amp;tl=ta&amp;u=https://wishmecards.com/&amp;usg=ALkJrhjiFytMuK2fOjWZBBYmpj31VrBl0A"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">உங்கள் தொடர்புகளை எந்த CRM க்கும் ஏற்றுமதி செய்யுங்கள்</font></font></a></h4>
+                        <h4 class="title"><a href="https://translate.googleusercontent.com/translate_c?depth=1&amp;hl=en&amp;pto=aue&amp;rurl=translate.google.com&amp;sl=en&amp;sp=nmt4&amp;tl=ta&amp;u=https://wishmecards.com/&amp;usg=ALkJrhjiFytMuK2fOjWZBBYmpj31VrBl0A"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+வாடிக்கையாளர் உங்களை தொடர்பு கொள்ள</font></font></a></h4>
                         <!-- <p class="description">Less than 12% of paper business cards end up in a company’s CRM. With Online Vcards, upload 100% of the contacts your team meets to one centralized database.</p>-->
                      </div>
                   </div>
