--- a/tamil.html
+++ b/tamil.html
@@ -744,7 +744,7 @@ d),c.tick("tbsd_","wtsrt_"))}try{a=null,window.chrome&&window.chrome.csi&&(a=Mat
                         <div class="address">
                            <i class="ri-map-pin-2-fill" style="color: #47aeff;"></i>
                            <h4><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">இடம்:</font></font></h4>
-                           <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">எண்: 6/64, பலராமன் முதல் குறுக்குத் தெரு, நம்மங்கலம், மேடவகம், சென்னை -600117.</font></font></p>
+                           <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">எண்: 6/64, பலராமன் முதல் குறுக்குத் தெரு, நன்மங்கலம், மேடவாக்கம், சென்னை -600117.</font></font></p>
                         </div>
                         <div class="email">
                            <i class="ri-mail-send-line" style="color: #e80368;"></i>
