--- a/faiz_latheef.html
+++ b/faiz_latheef.html
@@ -49,7 +49,7 @@
                         </div>
                         <div class="card-block little-profile text-center"  style="padding-left: 15px;padding-right: 15px;    padding-top: 15px; background-image: url('assets/customer/images/real_estate_bg.jpg') ">
                            <h3 class="m-b-0 name_style" style="    color: #263238;">Faiz Latheef</h3>
-                           <p class="designation" style="margin-block-end: 0em; margin-bottom: 5px; color: #263238;" >Real Estate / All kinds of scrap Merchant & Dealer</p> 
+                           <p class="designation" style="margin-block-end: 0em; margin-bottom: 5px; color: #263238;" >Real Estate / All kinds of scrap Merchant &amp; Dealer</p> 
 						   <!--<p class="designation" style="    margin-block-end: 0em;
     font-size: 1rem !important;
     line-height: 0.8rem;
