--- a/ss_fishes.html
+++ b/ss_fishes.html
@@ -46,10 +46,10 @@
                      <div class="card no_margin">
                         <!--<img class="card-img-top" src="assets/images/background/profile-bg.jpg" alt="Card image cap">-->
                         <div class="top_background little-profile text-center" style="background-image: url('assets/customer/images/ss_fishes/image_fg.jpg');">
-                           <div class="pro-img"><img src="assets/customer/images/ss_fishes/logo_1.png" alt="user"></div>
+                           <div class="pro-img"><img src="assets/customer/images/ss_fishes/logo_2.png" alt="user"></div>
                         </div>
                         <div class="card-block little-profile text-center" style="padding-left: 15px;padding-right: 15px;    padding-top: 15px; background-image: url('assets/customer/images/ss_fishes/image_fg.jpg') ">
-                           <h3 class="m-b-0 name_style" style="color: indigo;background-color: white;">Khalid</h3>
+                           <h3 class="m-b-0 name_style" style="color: indigo;background-color: white;">Khalid Ali</h3>
                            <p class="designation" style="margin-block-end: 0em;margin-bottom: 5px;color: #263238;color: indigo;background-color: white;">SS FISHES</p> 
 						   <!--<p class="designation" style="    margin-block-end: 0em;
     font-size: 1rem !important;
